--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="middle-container">
             <div class="profile">
-              <img class="miner" src="https://cdn-user-icons.flaticon.com/90606/90606734/1674240017643.svg?token=exp=1674240938~hmac=65f4d7581b25e6c55bc2002070a2f40a" alt="">
+              <img class="miner" src="images/miner.png" alt="">
               <h2>Hello.</h2>
               <p>I'm a PhD student, a geologist, and now a programmer too.</p>
             </div>
